--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,10 @@
 <body>
 <!--Link all the pages-->
 <a href="solutions.html"></a>
+<a href="/solutions/healthcare-data-protection.html"></a>
+<a href="/solutions/data-protection.html"></a>
+<a href="/solutions/infrastructure-data-protection.html"></a>
+<a href="/solutions/iot-data-protection.html"></a>
 <a href="engineers.html"></a>
 <a href="media.html"></a>
 <a href="pricing.html"></a>
