--- a/src/navigation.html
+++ b/src/navigation.html
@@ -49,54 +49,54 @@
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                Data Protection
+                                                Application Data Protection
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                Learn how to prevent data breaches
+                                                Learn how to prevent data breaches in any application
                                             </p>
                                         </div>
                                     </a>
 
-                                    <a href="/solutions/infrastructure-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/solutions/infrastructure-data-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/calendar -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                Infrastructure Protection
+                                                Infrastructure Data Protection
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                The best protection for your entire deployment
+                                                The protect your digitial supply chain
                                             </p>
                                         </div>
                                     </a>
 
 
-                                    <a href="/solutions/healthcare-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/solutions/healthcare-data-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/calendar -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                Healthcare Protection
+                                                Healthcare Data Protection
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                How to use Peacemakr to protect Protected Health Information
+                                                Drop-in solutions for Protected Health Information
                                             </p>
                                         </div>
                                     </a>
 
 
-                                    <a href="/solutions/infrastructure-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/solutions/iot-data-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/calendar -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                IoT Data Security
+                                                IoT Data Protection
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
                                                 Protect data in your IoT products
