--- a/src/solutions/healthcare-data-protection.html
+++ b/src/solutions/healthcare-data-protection.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Peacemakr | solutions</title>
+    <title>HIPAA Information Protection Requirements</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="../styles.css">
     <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
-    <meta property="og:title" content="Understanding "/>
+    <meta property="og:title" content="HIPAA Information Protection Requirements"/>
     <meta property="og:description"
-          content="Data Security simplified."/>
+          content="What are HIPAA's Information Protection Requriements? The HIPAA statute consists of several regulations, including the Privacy, Security, and Breach Notification Rules. In addition to these Rules, organizations need to pay attention to recent enforcement actions and case law to understand today's HIPAA information protection requirements."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://peacemakr.io/solutions.html"/>
-    <meta itemprop="name" content="Peacemakr">
+    <meta property="og:url" content="https://peacemakr.io/solutions/healthcare-data-protection.html"/>
+    <meta itemprop="name" content="HIPAA Information Protection Requirements">
     <meta itemprop="description"
-          content="Data Security simplified.">
+          content="What are HIPAA's Information Protection Requriements? The HIPAA statute consists of several regulations, including the Privacy, Security, and Breach Notification Rules. In addition to these Rules, organizations need to pay attention to recent enforcement actions and case law to understand today's HIPAA information protection requirements.">
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Peacemakr"/>
+    <meta name="twitter:title" content="HIPAA Information Protection Requirements"/>
     <meta name="twitter:description"
-          content="Data Security simplified."/>
+          content="What are HIPAA's Information Protection Requriements? The HIPAA statute consists of several regulations, including the Privacy, Security, and Breach Notification Rules. In addition to these Rules, organizations need to pay attention to recent enforcement actions and case law to understand today's HIPAA information protection requirements."/>
     <script src="../navbar.js" type="text/javascript"></script>
     <script src="../risk_calculator.js" type="text/javascript"></script>
 
