--- a/src/navigation.html
+++ b/src/navigation.html
@@ -57,17 +57,17 @@
                                         </div>
                                     </a>
 
-                                    <a href="/solutions/infrastructure-data-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                    <a href="/solutions/digitial-supply-chain-data-protection.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <!-- Heroicon name: outline/calendar -->
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                Infrastructure Data Protection
+                                                Digital Supply Chain Data Protection
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                The protect your digitial supply chain
+                                                Protect digitial assets and deliverables
                                             </p>
                                         </div>
                                     </a>
