Bit more brush up on the language

--- a/src/solutions/digital-supply-chain-data-protection.html
+++ b/src/solutions/digital-supply-chain-data-protection.html
@@ -158,8 +158,13 @@
         <div class="flex-1 relative pt-16 px-6 pb-8 md:px-8">
           <div class="absolute top-0 p-5 inline-block bg-indigo-600 rounded-xl shadow-lg transform -translate-y-1/2">
             <!-- Heroicon name: outline/phone -->
-            <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+            <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 330 330" stroke="currentColor" aria-hidden="true">
+      <path id="XMLID_12_" d="M289.994,0h-60h-160h-30c-8.284,0-15,6.716-15,15c0,8.284,6.716,15,15,15h16.574l18.303,164.716
+    l-17.442,118.08c-0.638,4.314,0.634,8.692,3.483,11.993c2.85,3.301,6.994,5.199,11.355,5.199h155.453
+    c4.361,0,8.506-1.898,11.355-5.199c2.85-3.301,4.121-7.679,3.483-11.993l-17.442-118.08L243.42,30h31.574v124.988
+    c0,8.284,6.716,15,15,15c8.284,0,15-6.716,15-15V15C304.994,6.716,298.278,0,289.994,0z M159.994,269.988h-20
+    c-8.284,0-15-6.716-15-15c0-8.284,6.716-15,15-15h20c8.284,0,15,6.716,15,15C174.994,263.272,168.278,269.988,159.994,269.988z
+     M196.568,179.988h-31.574v-25c0-8.284-6.716-15-15-15c-8.284,0-15,6.716-15,15v25H103.42L86.754,30h126.48L196.568,179.988z"/>
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is digital asset's hash sufficient?</h3>
@@ -226,10 +231,10 @@
 <div class="relative bg-white py-16 sm:py-24 lg:py-32">
   <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
     <p class="mt-2 text-4xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
-      Only Signing Digitial Assets ensure authenticity
+      Only signing a digitial asset ensure authenticity
     </p>
     <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-      By signing digital assets on blessed graduation from one Secure Software Developme Lifecycle to another, we ensure authenticity upon verification. Before deploying code to production, without verification of a signed digital asset, there's not assurance that your SSDLC blessed the asset, which could have been altered or contain malicious code.
+      By signing digital assets after Secure Software Development stages and verifying signatures before use, we ensure authenticity and enforce operational maturity of your SSDLC.
     </p>
     
   </div>
@@ -254,7 +259,7 @@
       <div class="mt-8">
         <div class="inline-flex rounded-md shadow">
           <a href="mailto:info@peacemakr.io" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-gray-900 bg-white hover:bg-indigo-100">
-            Contact our Digital Supply Chain Security Experts
+            Contact our Data Security Experts
             <!-- Heroicon name: solid/external-link -->
             <svg class="-mr-1 ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
               <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
