Start data loss prevention

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,7 @@
 <a href="/solutions/healthcare-data-protection.html"></a>
 <a href="/solutions/data-protection.html"></a>
 <a href="/solutions/digital-supply-chain-data-protection.html"></a>
+<a href="/solutions/data-loss-prevention.html"></a>
 <a href="/solutions/iot-data-protection.html"></a>
 <a href="engineers.html"></a>
 <a href="media.html"></a>
