--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -167,7 +167,7 @@
      M196.568,179.988h-31.574v-25c0-8.284-6.716-15-15-15c-8.284,0-15,6.716-15,15v25H103.42L86.754,30h126.48L196.568,179.988z"/>
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Is digital asset's hash sufficient?</h3>
+          <h3 class="text-xl font-medium text-gray-900">Is a digital asset's hash sufficient?</h3>
           <p class="mt-4 text-base text-gray-500">No. Anyone that can hijack a digital asset can replace it's hashed value too, since there are no secrets protecting the hash.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
@@ -184,7 +184,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is encrypting digital assets sufficient?</h3>
-          <p class="mt-4 text-base text-gray-500">No. Encryption alone only provides content privacy and tamper detection, but it does not provide non-repudiation - the property that proves the digital asset passed your SSDLC.</p>
+          <p class="mt-4 text-base text-gray-500">No. Encryption alone only provides content privacy and tamper detection, but it does not provide non-repudiation - the proof that the SSDLC blessed a digital asset.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="https://betterprogramming.pub/6-questions-to-ask-before-encrypting-application-layer-data-3b9419bd5d1d" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
