Wording, on the right file this time though

--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -109,7 +109,7 @@
         <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
           <div class="lg:w-0 lg:flex-1">
             <h2 class="text-3xl font-extrabold tracking-tight text-white">
-              Active DLP Solutions trace data even after it's gone.
+              Active DLP solutions traces data even after it's gone.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
               Peacemakr wraps data with a security layer so that you konw when any system or user accesses it, even outside your VPC.
