--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -109,7 +109,7 @@
         <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
           <div class="lg:w-0 lg:flex-1">
             <h2 class="text-3xl font-extrabold tracking-tight text-white">
-              Active DLP solutions traces data even after it's gone.
+              Active DLP detects unauthorized data access attempts, even outside your network.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
               Peacemakr wraps data with a security layer so that you konw when any system or user accesses it, even outside your VPC.
@@ -138,13 +138,13 @@
       <div class="absolute inset-0 bg-gray-800 mix-blend-multiply" aria-hidden="true"></div>
     </div>
     <div class="relative max-w-7xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
-      <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">Why is Data Protection critical to Digital Supply Chain Security?</h1>
+      <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">What's broken with vanilla DLP?</h1>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">The Secure Software Development Lifecycle contains a Bill of Materials, Static Application Security Testing (SAST), Dynamic Application Security Testing (DAST), Glassbox Penetration Testing, Closedbox Penetration Testing, and many other security results.   </p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Data loss prevention software is installed to identify and prevent business critical from is not lost, misused, or access by unauthorized users, in accordance to policies driven by HIPAA, PCI-DSS, or GDPR</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Then, we prioritize fixes according the committed Service License Agreements of Vulnerability Remediations.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">These software packages scan, alert, and prevent accidental or malicious data sharing that violates the politices.</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">However, the only way to ensure you know that what you're about to run in production was blessed by your SSDLC processes, is to sign the digital asset upon certification and verify the signature before running in production.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">The problem is this approach is not data-centric, brittle, and reactionary to security incidences - instead of preventative and failsafe.</p>
       <br><br><br>
     </div>
   </div>
@@ -158,20 +158,15 @@
         <div class="flex-1 relative pt-16 px-6 pb-8 md:px-8">
           <div class="absolute top-0 p-5 inline-block bg-indigo-600 rounded-xl shadow-lg transform -translate-y-1/2">
             <!-- Heroicon name: outline/phone -->
-            <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 330 330" stroke="currentColor" aria-hidden="true">
-      <path id="XMLID_12_" d="M289.994,0h-60h-160h-30c-8.284,0-15,6.716-15,15c0,8.284,6.716,15,15,15h16.574l18.303,164.716
-    l-17.442,118.08c-0.638,4.314,0.634,8.692,3.483,11.993c2.85,3.301,6.994,5.199,11.355,5.199h155.453
-    c4.361,0,8.506-1.898,11.355-5.199c2.85-3.301,4.121-7.679,3.483-11.993l-17.442-118.08L243.42,30h31.574v124.988
-    c0,8.284,6.716,15,15,15c8.284,0,15-6.716,15-15V15C304.994,6.716,298.278,0,289.994,0z M159.994,269.988h-20
-    c-8.284,0-15-6.716-15-15c0-8.284,6.716-15,15-15h20c8.284,0,15,6.716,15,15C174.994,263.272,168.278,269.988,159.994,269.988z
-     M196.568,179.988h-31.574v-25c0-8.284-6.716-15-15-15c-8.284,0-15,6.716-15,15v25H103.42L86.754,30h126.48L196.568,179.988z"/>
+            <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Is a digital asset's hash sufficient?</h3>
-          <p class="mt-4 text-base text-gray-500">No. Anyone that can hijack a digital asset can replace it's hashed value too, since there are no secrets protecting the hash.</p>
+          <h3 class="text-xl font-medium text-gray-900">Isn't perimiter detection sufficient?</h3>
+          <p class="mt-4 text-base text-gray-500">No. Depending on networking rules and other security layers to ensure all data is piped through a DLP choke point is brittle and not failsafe.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
-          <a href="https://stackoverflow.com/questions/7828053/hashing-vs-signing-binaries" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
+          <a href="https://www.egress.com/en-us/blog/dlp-has-failed-you" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
         </div>
       </div>
 
@@ -183,8 +178,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Is encrypting digital assets sufficient?</h3>
-          <p class="mt-4 text-base text-gray-500">No. Encryption alone only provides content privacy and tamper detection, but it does not provide non-repudiation - the proof that the SSDLC blessed a digital asset.</p>
+          <h3 class="text-xl font-medium text-gray-900">Shouldn't loss detection be done on cleartext data?</h3>
+          <p class="mt-4 text-base text-gray-500">No. Tagging and labeling of data to enforece DLP policies must be done on cleartext data, but you should protect all sensitive data with encryption immediately and enforce DLP on encrypted data using its labels.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="https://betterprogramming.pub/6-questions-to-ask-before-encrypting-application-layer-data-3b9419bd5d1d" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -231,10 +226,10 @@
 <div class="relative bg-white py-16 sm:py-24 lg:py-32">
   <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
     <p class="mt-2 text-4xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
-      Only signing a digitial asset ensure authenticity
+      Active DLP detects unauthorized access attempts, everywhere
     </p>
     <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-      By signing digital assets after Secure Software Development stages and verifying signatures before use, we ensure authenticity and enforce operational maturity of your SSDLC.
+      When unauthorized parties attempt to decrypt Peacemakr protected ciphertexts, the original data owner is alerted of the data exfiltation and unauthorized decryption attempt - even when the unauthorized access attempt is outside the VPC.
     </p>
     
   </div>
@@ -254,7 +249,7 @@
         And we’re here to help
       </p>
       <p class="mt-3 text-lg text-gray-300">
-        Peacemakr is a drop-in signing and verification solution, but it may not be obvious how it applies to your specific Digitial Supply Chain, as there are so many. We'd love an opportunity to work with your engineers on how Peacemakr fits into your tech stack.
+        Peacemakr is a drop-in Active DLP solution, but it may not be obvious how it applies to your specific infrastructure. We'd love an opportunity to work with your engineers on how Peacemakr fits into your tech stack.
       </p>
       <div class="mt-8">
         <div class="inline-flex rounded-md shadow">
