Fix SEO on data loss

--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -8,18 +8,18 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="../styles.css">
     <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
-    <meta property="og:title" content="Digital Supply Chain Data Protection"/>
+    <meta property="og:title" content="Peacemakr Active Data Loss Prevention"/>
     <meta property="og:description"
-          content="..."/>
+          content="Data loss prevention software is installed to identify and prevent business critical from is not lost, misused, or access by unauthorized users, in accordance to policies driven by HIPAA, PCI-DSS, or GDPR"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/solutions/digital-supply-chain-data-protection.html"/>
-    <meta itemprop="name" content="Digital Supply Chain Data Protection">
+    <meta itemprop="name" content="Peacemakr Active Data Loss Prevention">
     <meta itemprop="description"
-          content="....">
+          content="Data loss prevention software is installed to identify and prevent business critical from is not lost, misused, or access by unauthorized users, in accordance to policies driven by HIPAA, PCI-DSS, or GDPR">
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Digital Supply Chain Data Protection"/>
+    <meta name="twitter:title" content="Peacemakr Active Data Loss Prevention"/>
     <meta name="twitter:description"
-          content="..."/>
+          content="Data loss prevention software is installed to identify and prevent business critical from is not lost, misused, or access by unauthorized users, in accordance to policies driven by HIPAA, PCI-DSS, or GDPR"/>
     <script src="../navbar.js" type="text/javascript"></script>
     <script src="../risk_calculator.js" type="text/javascript"></script>
 
