--- a/src/solutions/application-data-protection.html
+++ b/src/solutions/application-data-protection.html
@@ -10,16 +10,16 @@
     <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
     <meta property="og:title" content="Peacemakr Application Data Protection"/>
     <meta property="og:description"
-          content="..."/>
+          content="E2E-Encryption-as-a-Service stops data breaches by keeping your data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest)."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/solutions.html"/>
     <meta itemprop="name" content="Peacemakr Application Data Protection">
     <meta itemprop="description"
-          content="...">
+          content="E2E-Encryption-as-a-Service stops data breaches by keeping your data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).">
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Peacemakr Application Data Protection"/>
     <meta name="twitter:description"
-          content="..."/>
+          content="E2E-Encryption-as-a-Service stops data breaches by keeping your data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest)."/>
     <script src="../navbar.js" type="text/javascript"></script>
     <script src="../risk_calculator.js" type="text/javascript"></script>
 
@@ -75,16 +75,16 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-4xl md:text-5xl">
-                        <span class="block lg:inline">Peacemakr's Application</span>
+                        <span class="block lg:inline">Application</span>
                         <span class="block text-indigo-600 lg:inline">Data Protection</span>
                     </h1>
                 </div>
             </main>
         </div>
     </div>
-    <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+    <div class="lg:absolute lg:inset-y-0 lg:right-12 lg:w-1/3">
         <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
-        " src="/images/about_bg.jpg" alt="">
+        " src="/images/locked_phone.jpg" alt="">
     </div>
 </div>
 
@@ -97,10 +97,10 @@
         <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
           <div class="lg:w-0 lg:flex-1">
             <h2 class="text-3xl font-extrabold tracking-tight text-white">
-              Data protection in your application.
+              E2E-Encryption designed for the entire data lifecycle.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-              Peacemakr wraps data with a security layer that protects it against almost any threat model.
+              Peacemakr wraps data with a security layer that protects it against almost any threat model, for the data's entire lifecycle.
             </p>
           </div>
           <div class="lg:flex-1 items-center justify-center">
@@ -302,7 +302,7 @@
       </p>
       <div class="flex md:justify-center">
         <div class="mt-4 max-w-2xl md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
-              E2E-Encryption-as-a-Service stops data breaches by keeping your data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
+              E2E-Encryption stops data breaches by keeping your data protected for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
             </div>
               <br>
       <p class="mt-4 max-w-2xl text-xl text-left text-gray-500 lg:mx-auto">
