--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -96,7 +96,7 @@
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
-        " src="/images/cover_bg.jpg" alt="">
+        " src="/images/cyber.jpg" alt="">
     </div>
 </div>
 
