Fix SEO to solutions page titles

--- a/src/solutions/iot-data-protection.html
+++ b/src/solutions/iot-data-protection.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Peacemakr | solutions</title>
+    <title>IoT Data Protection</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="../styles.css">
     <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
@@ -75,8 +75,8 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-4xl md:text-5xl">
-                        <span class="block lg:inline">Regulatory Compliance that</span>
-                        <span class="block text-indigo-600 lg:inline">Stops Data Breaches</span>
+                        <span class="block lg:inline">IoT</span>
+                        <span class="block text-indigo-600 lg:inline">Data Protection</span>
                     </h1>
                 </div>
             </main>
