--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Digital Supply Chain Data Protection</title>
+    <title>Active Data Loss Prevention</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="../styles.css">
     <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
