Sound less alarmist and perscriptive

--- a/src/solutions/healthcare-data-protection.html
+++ b/src/solutions/healthcare-data-protection.html
@@ -217,7 +217,7 @@
 <div class="relative bg-white py-16 sm:py-24 lg:py-32">
   <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
     <p class="mt-2 text-4xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
-      Only E2E-Encryption can prevent data breaches
+      E2E-Encryption Protects PHI for HIPAA
     </p>
     <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
       E2E-Encryption prevents data breaches by keeping PHI encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).
