--- a/src/solutions/application-data-protection.html
+++ b/src/solutions/application-data-protection.html
@@ -298,11 +298,11 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="md:text-center">
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-6xl">
-        Only E2E-Encryption Stop Breaches
+        E2E-Encryption Protects Application Data
       </p>
       <div class="flex md:justify-center">
         <div class="mt-4 max-w-2xl md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
-              E2E-Encryption stops data breaches by keeping your data protected for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
+              E2E-Encryption keeps your data protected for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
             </div>
               <br>
       <p class="mt-4 max-w-2xl text-xl text-left text-gray-500 lg:mx-auto">
