--- a/src/solutions/iot-data-protection.html
+++ b/src/solutions/iot-data-protection.html
@@ -129,7 +129,7 @@
       <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">Why is IoT Data Security Difficult?</h1>
       <p class="mt-6 max-w-3xl text-xl text-gray-300">TLS and Encryption-at-Rest are necessary data security tools, but they do not stop an adversary that breaks into your system from stealing data.</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Further, IoT platforms themselves are resource constrained, and required optimized compilers, code, and minimal libraries - traditionally a very difficult combination to find with encryption libraries.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Further, IoT platforms themselves are extremely resource constrained, and required optimized code, compilers, and minimal libraries - a very difficult combination for encryption libraries.</p>
     </div>
   </div>
 
@@ -177,11 +177,11 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="md:text-center">
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-6xl">
-        Only E2E-Encryption Stop Breaches
+        E2E-Encryption Protects IoT Devices
       </p>
       <div class="flex md:justify-center">
         <div class="mt-4 max-w-2xl md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
-              E2E-Encryption stops data breaches by keeping your data protected for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
+              E2E-Encryption keeps your IoT's data protected for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
             </div>
               <br>
       <p class="mt-4 max-w-2xl text-xl text-left text-gray-500 lg:mx-auto">
