FAQ belongs in Resources

--- a/src/navigation.html
+++ b/src/navigation.html
@@ -158,20 +158,7 @@
                                         </div>
                                     </a>
 
-                                    <a href="/engineers_faqs.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
-                                        <!-- Heroicon name: outline/view-grid -->
-                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
-                                        </svg>
-                                        <div class="ml-4">
-                                            <p class="text-base font-medium text-gray-900">
-                                                FAQ
-                                            </p>
-                                            <p class="mt-1 text-sm text-gray-500">
-                                                Answers to most common questions.
-                                            </p>
-                                        </div>
-                                    </a>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -201,10 +188,10 @@
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                Blogs
+                                                Blog
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                Learn more about Peacemakr's contributions towards better security practices.
+                                                How does Peacemakr fit into the big picture?
                                             </p>
                                         </div>
                                     </a>
@@ -216,10 +203,25 @@
                                         </svg>
                                         <div class="ml-4">
                                             <p class="text-base font-medium text-gray-900">
-                                                The Security Podcast
+                                                Podcast
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                Discover real people overcoming<br>security problems.
+                                                Discover real people overcoming security challenges.
+                                            </p>
+                                        </div>
+                                    </a>
+
+                                     <a href="/engineers_faqs.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                        <!-- Heroicon name: outline/view-grid -->
+                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
+                                        </svg>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                FAQ
+                                            </p>
+                                            <p class="mt-1 text-sm text-gray-500">
+                                                Answers to most common questions.
                                             </p>
                                         </div>
                                     </a>
